// To compile: protoc -I=. --go_out=. protector_object.proto

// Definition of protobufs for protected objects
syntax = "proto2";

package protected_objects;

// Epochs must increase monotonically and be > 0
message object_id_message {
  required string obj_name                    = 1;
  optional int32 obj_epoch                    = 2;
}

// Standard statuses are: active, retired, inactive, revoked
// Standard types are: file, key, key-aes128-ctr-hmacsha256
// NotBefore and notAfter are string with the standard
//     string format: 2006-01-02 15:04:05.999999999 -0700 MST
message object_message {
  required object_id_message obj_id           = 1;
  optional string obj_type                    = 2;
  optional string obj_status                  = 3;
  optional string not_before                  = 4;
  optional string not_after                   = 5;
  optional bytes obj_val                      = 6;
}

message node_message {
  required object_id_message protected_obj_id = 1;
  optional object_id_message protector_obj_id = 2;
}

message protected_object_message {
  required object_id_message protected_obj_id = 1;
  optional object_id_message protector_obj_id = 2;
  optional bytes blob                         = 3;
}

message object_store_message {
  repeated object_message objects = 1;
}

//message node_store_message {
//  repeated node_message node_objects = 1;
//}

message protected_object_store_message {
  repeated protected_object_message protected_objects = 1;
}
